--- a/graduationdata.tex
+++ b/graduationdata.tex
@@ -27,6 +27,8 @@ DoubleEntry: Tamper-proof Interaction History\\
 %examples:
 %prof. dr. ir. H. J. Sips (chair) & Delft University of Technology \\
 %ir. dr. D. H. J. Epema           & Delft University of Technology \\
+Prof. dr. ir. H. J. Sips            & Delft University Of Technology \\
+Prof. dr. ir. J. A. Pouwelse        & Delft University of Technology \\
 \end{tabular}
 
 \begin{abstract} %de abstract bevat alleen een korte samenvatting van de inhoud van het onderzoek
